trying to fix image

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   </head>
   <body>
     <div id="root">
-      
     </div>
+    <img src="SimpsonsPedia/simpsons.png" alt="The Simpsons">
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
